@@ -81,6 +81,10 @@ Statements will be written in simple sorted order, which is faster, but may resu
 Parse \fIINPUT\fR as a string (terminates options).
 
 .TP
+.BR \-t
+Write terser output without newlines.
+
+.TP
 .BR \-v
 Display version information and exit.
 
